# MatrixOps

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_8md.html  TUTORIAL.md  annotated.html  classes.html  classmatrixops_1_1Matrix-members.html  classmatrixops_1_1Matrix.html  classmatrixops_1_1Matrix_a059d718464a43e3a69c89b5aad1b8ba3_icgraph.map  classmatrixops_1_1Matrix_a059d718464a43e3a69c89b5aad1b8ba3_icgraph.md5  classmatrixops_1_1Matrix_a94d5d904b166e3cfb8aaebf73f846f12_icgraph.map  classmatrixops_1_1Matrix_a94d5d904b166e3cfb8aaebf73f846f12_icgraph.md5  classmatrixops_1_1Matrix_aba734a9f0db7cac6a9e8b6fb809675b8_cgraph.map  classmatrixops_1_1Matrix_aba734a9f0db7cac6a9e8b6fb809675b8_cgraph.md5  dir_000002_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bf5a6938bab98987514db5f96525c350.html  dir_bf5a6938bab98987514db5f96525c350_dep.map  dir_bf5a6938bab98987514db5f96525c350_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  matrix_8cpp.html  matrix_8cpp__incl.map  matrix_8cpp__incl.md5  matrix_8h.html  matrix_8h__dep__incl.map  matrix_8h__dep__incl.md5  matrix_8h__incl.map  (+6 more)
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: CMakeLists.txt  bench_matrix.cpp
cmake/: MatrixOpsConfig.cmake.in
include/matrixops/: matrix.h
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_1.js  pages_2.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js
src/: matrix.cpp
tests/: CMakeLists.txt  test_matrix.cpp
